improve router navigation and state management in feature-schedule.page.ts use ion-datetime component instead of custom-built calendar component allow Ionic 7 to continue to use the hidden attribute in Angular HTML

--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -27,60 +27,26 @@
           <div class="moment-label"> <img class="side-image" src="assets/img/Calendar_Gray.png"></div>
           <div class="moment-input">Timeline</div>
           <ion-buttons slot="end" class="ion-no-margin">
+            <ion-button (click)="touchSchedule('update schedule')">Save</ion-button>
             <ion-button fill="clear" (click)="deleteSchedule()" class="close-button"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
           </ion-buttons>
         </ion-item>
         <ion-item lines="none">
-          <ion-label (click)="focusCalendarDateField('start')" class="cursor-pointer"><span [ngClass]="{ 'underline-datestring': dateType == 'start'}">Start Date: {{recurrenceStartDate | datetime: 'w:l,m:s,y:n,d:n'}}</span><p style="color: red; font-style: italic;" *ngIf="dateType === 'start'"><ion-icon name="alert-circle"></ion-icon>Choose a Date Below</p></ion-label> <!--Start, Choose a date below-->
-          <ion-datetime-button datetime="time1" *ngIf="recurrenceStartTime"></ion-datetime-button>
+          <ion-label class="cursor-pointer">Start Date: </ion-label> <!--Start, Choose a date below-->
+          <ion-datetime-button datetime="time1"></ion-datetime-button>
         </ion-item>
         <ion-modal [keepContentsMounted]="true">
           <ng-template>
-            <ion-datetime id="time1" minuteValues="0,15,30,45" presentation="time" [(ngModel)]="recurrenceStartTime"></ion-datetime>
+            <ion-datetime id="time1" minuteValues="0,15,30,45" presentation="date-time" [(ngModel)]="schedule.startDate"></ion-datetime>
           </ng-template>
         </ion-modal>
-        <ion-item lines="none" *ngIf="dateType != 'start'">
-          <ion-label (click)="focusCalendarDateField('end')" class="cursor-pointer" ><span [ngClass]="{ 'underline-datestring': dateType == 'end'}">End Date: {{recurrenceEndDate | datetime: 'w:l,m:s,y:n,d:n'}}</span><p style="color: red; font-style: italic;" *ngIf="dateType === 'end'"><ion-icon name="alert-circle"></ion-icon>Choose a Date Below</p></ion-label> <!--End, Choose a date below-->
-          <ion-datetime-button datetime="time2" *ngIf="recurrenceEndTime"></ion-datetime-button>
+        <ion-item lines="none">
+          <ion-label class="cursor-pointer">End Date: </ion-label> <!--Start, Choose a date below-->
+          <ion-datetime-button datetime="time2"></ion-datetime-button>
         </ion-item>
         <ion-popover [keepContentsMounted]="true">
           <ng-template>
-            <ion-datetime id="time2" minuteValues="0,15,30,45" presentation="time" [(ngModel)]="recurrenceEndTime"></ion-datetime>
-          </ng-template>
-        </ion-popover>
-        <ion-card class="monthview" *ngIf="dateType">
-          <div class="month-title-container">
-            <ion-icon name="chevron-back-outline" class="calendar-arrow left" (click)="calendarService.changeDate($event, 4)"></ion-icon>
-            <h4 class="month-title">{{calendarService.calendar.viewTitle}}</h4>
-            <ion-icon name="chevron-forward-outline" class="calendar-arrow right" (click)="calendarService.changeDate($event, 2)"></ion-icon>
-          </div>
-          <div class="monthview-day-headers">S</div>
-          <div class="monthview-day-headers">M</div>
-          <div class="monthview-day-headers">T</div>
-          <div class="monthview-day-headers">W</div>
-          <div class="monthview-day-headers">T</div>
-          <div class="monthview-day-headers">F</div>
-          <div class="monthview-day-headers">S</div>
-
-          <div class="monthview-element" *ngFor="let dayOfMonth of calendarService.calendar.daysInViewMonth; trackBy: customTrackBy">
-            <div class="monthview-element-content cursor-pointer" [ngClass]="{ 'selected-date' : calendarService.calendar.selectedDate.toString() === dayOfMonth.date.toString() && dayOfMonth.date != ' ','current-date': calendarService.calendar.currentDate.toString().substring( 0 , 15) == dayOfMonth.date.toString().substring(0 , 15)}" (click)="changeSelectedDate(dayOfMonth.date)">
-              <div *ngIf="dayOfMonth.date == ' ' ">&nbsp;&nbsp;</div>
-              <div *ngIf="dayOfMonth.date != ' ' ">
-                {{dayOfMonth.date.getDate()}}
-              </div>
-              <div class="monthview-dot-container" *ngFor="let calendarItem of dayOfMonth.dayEvents; trackBy: customTrackBy; let i = index;">
-                <div class="monthview-element-dot" [ngClass]="{'past-calendar-item' : calendarItem.pastEvent}" *ngIf="i < 5"></div>
-              </div>
-            </div>
-          </div>
-        </ion-card>
-        <ion-item lines="none" *ngIf="dateType == 'start'">
-          <ion-label (click)="dateType = 'end'" class="cursor-pointer" >End: {{recurrenceEndDate  | datetime: 'w:l,m:l,y:n,d:n'}}</ion-label>
-          <ion-datetime-button datetime="time3"></ion-datetime-button>
-        </ion-item>
-        <ion-popover [keepContentsMounted]="true">
-          <ng-template>
-            <ion-datetime id="time3" minuteValues="0,15,30,45" presentation="time" [(ngModel)]="recurrenceEndTime"></ion-datetime>
+            <ion-datetime id="time2" minuteValues="0,15,30,45" presentation="date-time" [(ngModel)]="schedule.options.recurrenceEndDate"></ion-datetime>
           </ng-template>
         </ion-popover>
       </ion-item-group>
