--- a/src/app/pages/user/discover/discover.page.html
+++ b/src/app/pages/user/discover/discover.page.html
@@ -77,7 +77,7 @@
       </ion-card>
     </ion-row>
   </ion-grid>
-  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+  <!--<ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button class="filter-button" color="light">
       <span *ngIf="filterOption === 'all'">
         Filter
@@ -101,5 +101,5 @@
         Group Plans
       </ion-fab-button>
     </ion-fab-list>
-  </ion-fab>
+  </ion-fab>-->
 </ion-content>
