--- a/src/app/pages/feature/manage/feature-curriculum/feature-curriculum.page.html
+++ b/src/app/pages/feature/manage/feature-curriculum/feature-curriculum.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start" *ngIf="modalPage">
       <ion-button (click)="closeModal()" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
-    <ion-title>Curriculum (Dev)</ion-title>
+    <ion-title>Curriculum</ion-title>
   </ion-toolbar>
 </ion-header>
 
