--- a/src/global.scss
+++ b/src/global.scss
@@ -23,6 +23,9 @@
 @import "swiper/scss/navigation";
 @import "swiper/scss/pagination";
 
+// angular-calendar
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
+
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
