added feature-template page

--- a/src/app/pages/feature/manage/feature-creator/feature-creator.page.html
+++ b/src/app/pages/feature/manage/feature-creator/feature-creator.page.html
@@ -26,13 +26,17 @@
         <ion-list>
           <ion-item (click)="clickManageMenu('overview', null)">
             <ion-icon slot="start" name="person" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': router.url.includes('/overview/')}">Overview</ion-label>
+            <ion-label [ngClass]="{ 'bold-font': router.url.includes('/overview/')}">Basic Info</ion-label>
           </ion-item>
-          <ion-item (click)="clickManageMenu('curriculum', null)" *ngIf="['owner'].includes(this.userData.user.role)">
+          <ion-item (click)="clickManageMenu('curriculum', null)">
             <ion-icon slot="start" name="bicycle" *ngIf="platform.width() < 768"></ion-icon>
             <ion-label [ngClass]="{ 'bold-font': router.url.includes('/curriculum/')}">Curriculum</ion-label>
           </ion-item>
           <ion-item-divider></ion-item-divider>
+          <ion-item (click)="clickManageMenu('template', null)">
+            <ion-icon slot="start" name="bicycle" *ngIf="platform.width() < 768"></ion-icon>
+            <ion-label [ngClass]="{ 'bold-font': router.url.includes('/template/')}">Template</ion-label>
+          </ion-item>
           <ion-item-group *ngIf="moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210) || moment.resource.matrix_number[0].includes(10220)"> <!--if Schedule is enabled-->
             <ion-item (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i">
               <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
