--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -27,7 +27,7 @@
           <div class="moment-label"> <img class="side-image" src="assets/img/Calendar_Gray.png"></div>
           <div class="moment-input">Timeline</div>
           <ion-buttons slot="end" class="ion-no-margin">
-            <ion-button (click)="touchSchedule('update schedule')">Save</ion-button>
+            <!--<ion-button (click)="touchSchedule('update schedule')">Save</ion-button>-->
             <ion-button fill="clear" (click)="deleteSchedule()" class="close-button"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
           </ion-buttons>
         </ion-item>
@@ -80,15 +80,15 @@
         <ion-button (click)="touchSchedule('create schedule')" *ngIf="!this.schedule._id">
           <span>Create Schedule</span>
         </ion-button>
-        <ion-button (click)="promptTouchSchedule()" *ngIf="this.schedule._id && this.schedule.options.recurrence" shape="round"> <!--Only available for non-Plan child Activity-->
+        <ion-button (click)="promptTouchSchedule()" *ngIf="this.schedule._id && this.schedule.options.recurrence" shape="round" [hidden]="!includeCalendarItems"> <!--Only available for non-Plan child Activity-->
           <span>Repopulate Timeline</span>
         </ion-button>
-        <ion-button (click)="touchSchedule('update schedule')" *ngIf="this.schedule._id && !this.schedule.options.recurrence" shape="round"> <!--Only available for non-Plan child Activity-->
+        <ion-button (click)="touchSchedule('update schedule')" *ngIf="this.schedule._id" shape="round"  [hidden]="includeCalendarItems"> <!--Only available for non-Plan child Activity-->
           <span>Save</span>
         </ion-button>
       </ion-row>
       <ion-item-divider></ion-item-divider>
-      <ion-item *ngIf="this.schedule._id && !timeline.length">
+      <ion-item *ngIf="this.schedule._id && !timeline.length" [hidden]="!includeCalendarItems">
         <ion-label class="ion-text-center message-label">Your timeline is empty.</ion-label>
       </ion-item>
       <ion-item *ngIf="!this.schedule._id">
@@ -169,7 +169,7 @@
           </ion-card-content>
         </ion-card>
       </div>
-      <ion-card mode="md" (click)="promptNewGoalName($event)">
+      <ion-card mode="md" (click)="promptNewGoalName($event)" [hidden]="!includeCalendarItems">
         <ion-card-content class="goal-content ion-no-padding">
           <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
             <ion-icon name="add"></ion-icon>
@@ -299,7 +299,10 @@
           <ion-label class="ion-margin-left">Store Notes in this Schedule</ion-label>
           <ion-checkbox [(ngModel)]="schedule.array_boolean[5]"></ion-checkbox>
         </ion-item>
-
+        <ion-item lines="none" *ngIf="userData.user && ['owner','admin','staff'].includes(userData.user.role)">
+          <ion-label class="ion-margin-left">Show Calendar Items and Goals</ion-label>
+          <ion-checkbox [(ngModel)]="includeCalendarItems" (ionChange)="setupSchedulePage()"></ion-checkbox>
+        </ion-item>
       </ion-item-group>
     </ion-list>
   </div>
