--- a/src/app/pages/feature/manage/feature-creator/feature-creator.page.html
+++ b/src/app/pages/feature/manage/feature-creator/feature-creator.page.html
@@ -35,10 +35,10 @@
           <ion-item-divider></ion-item-divider>
           <ion-item (click)="clickManageMenu('template', null)">
             <ion-icon slot="start" name="bicycle" *ngIf="platform.width() < 768"></ion-icon>
-            <ion-label [ngClass]="{ 'bold-font': router.url.includes('/template/')}">Template</ion-label>
+            <ion-label [ngClass]="{ 'bold-font': router.url.includes('/template/')}">Templates</ion-label>
           </ion-item>
           <ion-item-group *ngIf="moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210) || moment.resource.matrix_number[0].includes(10220)"> <!--if Schedule is enabled-->
-            <ion-item (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i">
+            <ion-item (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i" class="ion-padding-start">
               <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
               <ion-label [ngClass]="{ 'bold-font': router.url.includes('/schedule/') && router.url.includes(schedule._id)}" *ngIf="platform.width() < 768 && !schedule.title">Schedule {{i + 1}}</ion-label>
               <ion-label [ngClass]="{ 'bold-font': router.url.includes('/schedule/') && router.url.includes(schedule._id)}" *ngIf="platform.width() < 768 && schedule.title">{{schedule.title}}</ion-label>
@@ -46,7 +46,7 @@
             </ion-item>
             <ion-item (click)="clickManageMenu('new-schedule', null)">
               <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-              <ion-label [ngClass]="{ 'bold-font': router.url.includes('/new-schedule')}">+ Schedule</ion-label>
+              <ion-label [ngClass]="{ 'bold-font': router.url.includes('/new-schedule')}">+ Template</ion-label>
             </ion-item>
           </ion-item-group>
           <div *ngIf="notes_schedule && userData.user && ['owner','admin','staff'].includes(userData.user.role)">
