--- a/src/app/pages/feature/manage/feature-template/feature-template.page.html
+++ b/src/app/pages/feature/manage/feature-template/feature-template.page.html
@@ -3,11 +3,40 @@
     <ion-buttons slot="start" *ngIf="modalPage">
       <ion-button fill="solid" (click)="closeModal(false)" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
-    <ion-title>Template</ion-title>
+    <ion-title>Preview Templates</ion-title>
   </ion-toolbar>
-</ion-header>
-
-<ion-content>
+  <ion-item-group>
+    <ion-item lines="none">
+      <ion-label class="cursor-pointer">Date Range: </ion-label> <!--Start, Choose a date below-->
+      <ion-datetime-button datetime="feature-template-time1"></ion-datetime-button>
+      <span> - </span>
+      <ion-datetime-button datetime="feature-template-time2"></ion-datetime-button>
+    </ion-item>
+    <ion-popover [keepContentsMounted]="true">
+      <ng-template>
+        <ion-datetime id="feature-template-time1" presentation="date" [(ngModel)]="populateStartDate" (ionChange)="repopulateTemplate()"></ion-datetime>
+      </ng-template>
+    </ion-popover>
+    <ion-popover [keepContentsMounted]="true">
+      <ng-template>
+        <ion-datetime id="feature-template-time2" presentation="date" [(ngModel)]="populateEndDate" (ionChange)="repopulateTemplate()"></ion-datetime>
+      </ng-template>
+    </ion-popover>
+    <ion-item lines="none">
+      <ion-label class="cursor-pointer">Templates:</ion-label>
+      <ion-select [(ngModel)]="selectedScheduleIds" (ionChange)="repopulateTemplate()" slot="end" [multiple]="true">
+        <ion-select-option *ngFor="let schedule of schedules" [value]="schedule._id">{{schedule.title}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-progress-bar [value]="progress"></ion-progress-bar>
+    </ion-item>
+  </ion-item-group>
+  <ion-row class="ion-justify-content-center">
+    <ion-button shape="round" (click)="addToCurriculum()">
+      <span>Add to Curriculum</span>
+    </ion-button>
+  </ion-row>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button fill="solid">
@@ -18,7 +47,8 @@
                 [(viewDate)]="viewDate"
                 (viewDateChange)="closeOpenMonthViewDay()"
         >
-          Previous
+          <span *ngIf="platform.width() >= 768">Previous</span>
+          <span *ngIf="platform.width() < 768"><ion-icon name="chevron-back-outline"></ion-icon></span>
         </div>
       </ion-button>
       <ion-button fill="solid">
@@ -38,14 +68,11 @@
                 [(viewDate)]="viewDate"
                 (viewDateChange)="closeOpenMonthViewDay()"
         >
-          Next
+          <span *ngIf="platform.width() >= 768">Next</span>
+          <span *ngIf="platform.width() < 768"><ion-icon name="chevron-forward-outline"></ion-icon></span>
         </div>
       </ion-button>
     </ion-buttons>
-
-    <ion-title>
-      {{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}
-    </ion-title>
 
     <ion-buttons slot="end">
       <ion-button fill="solid">
@@ -66,7 +93,7 @@
           Week
         </div>
       </ion-button>
-      <!--<ion-button fill="solid">
+      <ion-button fill="solid">
         <div
                 class="btn btn-primary"
                 (click)="setView(CalendarView.Day)"
@@ -74,10 +101,17 @@
         >
           Day
         </div>
-      </ion-button>-->
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-title *ngIf="view === CalendarView.Day">Preview {{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</ion-title>
+    <ion-title *ngIf="view === CalendarView.Week">Preview {{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</ion-title>
+    <ion-title *ngIf="view === CalendarView.Month">Preview  {{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</ion-title>
+  </ion-toolbar>
+</ion-header>
 
+<ion-content>
   <div [ngSwitch]="view">
     <mwl-calendar-month-view
             *ngSwitchCase="CalendarView.Month"
